public/css/main.css
body {
  font-family: Sans-serif;
}

.content {
  margin: 0 auto;
  width: 100%;
  text-align: center;
}

.logo {
  font-family: "Gill Sans";
  font-weight: normal;
  font-size: 3em;
  color: #323232;
}

.header p {
  color: #898989;
  font-size: 1.5em;
}

.form {
  padding: 2.5em 0;
  width: 50%;
  margin: 0 auto;
}

.form input {
  border-radius: 3px;
  padding: 0.6em;
  border: 1px solid #ddd;
  color: #222;
  font-size: 1.3em;
  outline-width: 0;
}

.form input.submit {
  background-color: #FF8F00;
  color: #fff;
  padding: 0.6em 3em;
}

.coins {
  list-style: none;
  padding: 0;
  font-size: 2em;
}

.coins li {
  margin-bottom: 0.5em;
}

.coin {
  display: inline-block;
  font-size: 1em;
  width: 2.5em;
  height: 2.5em;
  margin-left: 0.4em;
  line-height: 2.5em;
  border: 1px solid #000;
  border-radius: 50%;
  box-shadow: inset 0 0 0 0.2em #000;
  background-color: #F2B50F;
  color: #000;
}

